# automatic_learning

./: .gitignore  README.md  pyproject.toml
final_project/: eda.ipynb  eda_executed.ipynb  eda_inversor.ipynb  eda_inversor_executed.ipynb  regression.ipynb  regression_bayesian.ipynb
final_project/data/: README.md  estacao_meteorologica.csv
list_1/: README.md  aula.ipynb  lista_1_diego_melo_603127 copy.ipynb
list_2/: README.md  lista_2_diego_melo_603127.ipynb
list_3/: README.md  lista_3_diego_melo_603127.ipynb
list_4/: lista_4_diego_melo_603127.ipynb
list_5/: README.md  lista_5_diego_melo_603127.ipynb
